[gd_scene load_steps=2 format=3 uid="uid://dpghhtc0epf80"]

[ext_resource type="Script" path="res://addons/easyAspectRatio/add_ratio.gd" id="1_e6xmu"]

[node name="AddRatio" type="PopupPanel"]
title = "New aspect ratio"
initial_position = 4
size = Vector2i(400, 200)
visible = true
borderless = false
script = ExtResource("1_e6xmu")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 4.0
offset_top = 4.0
offset_right = 396.0
offset_bottom = 196.0
alignment = 1

[node name="Name" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Name:"
horizontal_alignment = 1

[node name="LineEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Leave it empty to be \"width:height\""
alignment = 1

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="width" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="DialogName" type="Label" parent="VBoxContainer/width"]
layout_mode = 2
text = "Width ratio:"
horizontal_alignment = 1

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/width"]
layout_mode = 2
min_value = 1.0
step = 0.5
value = 1.0

[node name="height" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="DialogName" type="Label" parent="VBoxContainer/height"]
layout_mode = 2
text = "Height ratio:"
horizontal_alignment = 1

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/height"]
layout_mode = 2
min_value = 1.0
step = 0.5
value = 1.0

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="buttons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Create" type="Button" parent="VBoxContainer/buttons"]
layout_mode = 2
text = "Create"

[node name="Cancel" type="Button" parent="VBoxContainer/buttons"]
layout_mode = 2
text = "Cancel"

[connection signal="popup_hide" from="." to="." method="_on_popup_hide"]
[connection signal="text_changed" from="VBoxContainer/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="value_changed" from="VBoxContainer/width/SpinBox" to="." method="_on_spin_box_value_changed"]
[connection signal="value_changed" from="VBoxContainer/height/SpinBox" to="." method="_on_height_value_changed"]
[connection signal="pressed" from="VBoxContainer/buttons/Create" to="." method="_on_create_pressed"]
[connection signal="pressed" from="VBoxContainer/buttons/Cancel" to="." method="_on_popup_hide"]
